fix overflow issue

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -41,7 +41,7 @@ h1{
 }
 
 .bind {
-  padding-left: 25px;
+  padding-left: 0px;
   padding-right: -25px;
 }
 
@@ -63,8 +63,11 @@ h1{
 
 .wrapper {
     height: 50vh;
+    max-width: 100%;
+    text-align: center;
     background-color: #a8bcdb;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 20px 0 0 -25px;
 }
 
